mobile linebreak bugfix and image reposition on mobile bugfix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1695,3 +1695,7 @@ body.is-preload-0 #footer {
     width: 100%;
     position: absolute;
 }
+
+br {
+    display: block !important;
+}
